--- a/final_project/index_style.css
+++ b/final_project/index_style.css
@@ -4,19 +4,30 @@
     background-color: white;
 }
 
-
 /* company logo - top */
+
+
 
 .top {
     border-bottom: 2px solid black;
+}
+
+.carousel {
+    margin: 0;
+    width: 100%;
+    height: 609%;
+    text-align: center;
+    position: relative;
+    padding: 0;
+    justify-content: center;
 }
 
 .company-logo>img {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 30%;
-    padding: 10px 0px 10px 0px;
+    width: 28%;
+    padding: 0px 0px 0px 0px;
 }
 
 
@@ -34,7 +45,7 @@
 .col-md-4 {
     padding: 10px;
     position: relative;
-    text-align: center;
+    text-align: left;
     background-color: rgb(230, 230, 230);
 }
 
@@ -60,18 +71,18 @@
 }
 
 .col-md-4 {
-    line-height: 3;
+    line-height: 1.5;
     vertical-align: middle;
     text-align: left;
-}
+   }
 
 .nav-list,
 li,
 a {
     list-style: none;
-    font-family: 'Arima Madurai', cursive;
+    font-family: 'Playfair Display', serif;
     font-weight: 400;
-    font-size: 40px;
+    font-size: 28px;
     color: rgb(49, 49, 49);
     background-color: rgb(230, 230, 230);
     text-decoration: none;
@@ -93,6 +104,7 @@ a {
     margin: auto;
     width: 100%;
     text-align: center;
+    padding: 0;
 }
 
 .row {
@@ -125,6 +137,7 @@ a {
 
 .footer {
     padding: 30px 20px 0px 20px;
+   
 }
 
 .container-footer>.row,
@@ -132,6 +145,8 @@ a {
 .col-md-6.footer-social,
 i {
     background-color: rgb(230, 230, 230);
+    padding: 0;
+ 
 }
 
 .col-md-6.footer-copyright {
@@ -143,3 +158,4 @@ i {
 i {
     padding: 10px 15px;
 }
+
