--- a/final_project/index_style.css
+++ b/final_project/index_style.css
@@ -15,7 +15,7 @@
 .carousel {
     margin: 0;
     width: 100%;
-    height: 609%;
+    height: 60%;
     text-align: center;
     position: relative;
     padding: 0;
@@ -44,6 +44,7 @@
 .col-md-8,
 .col-md-4 {
     padding: 10px;
+    padding-top: 80px;
     position: relative;
     text-align: left;
     background-color: rgb(230, 230, 230);
@@ -118,19 +119,83 @@ a {
 }
 
 .column>img {
-    transition: transform .2s;
+    /* transition: transform .2s; */
 }
 
 .column>img:hover {
-    -ms-transform: scale(1.5);
+    /* -ms-transform: scale(1.5);
     /*IE9*/
-    -webkit-transform: scale(1.5);
+    /* -webkit-transform: scale(1.5); */
     /*Safari3-8*/
-    transform: scale(1.5);
-    -webkit-transform: scale(1.5);
+    /* transform: scale(1.5);
+    -webkit-transform: scale(2.8); 
     -moz-transform: scale(1.5);
-    -o-transform: scale(1.5);
+    -o-transform: scale(1.5); */
+    /* position: absolute;
+    max-width: 20%;  */
+   
+    /* top: 50%;
+    left: 50%; 
+    margin-top: -50px;
+    margin-left: auto;
+    margin-right: 500px;  */
+
+    /* margin-top: auto;
+    margin-bottom: auto; */
+    /* bottom: 50%; */
+
+    /* position:absolute; 
+    display:none; 
+    z-index:99;
+    left:50%;
+    top: 30%; */
+
+    /* right: 50%;
+    max-width: 50%;
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    transform: translateX(-50%);
+    display:block; */
+  
+
+  transform: scale(2) rotateZ(0deg) ;
+  -moz-transform: scale(2) rotateZ(0deg);
+  -webkit-transform: scale(2) rotateZ(0deg);
+  -o-transform: scale(2) rotateZ(0deg);
+  transition: all 1s ease-in-out 0s;
+    -moz-transition: all 1s ease-in-out 0s;
+    -webkit-transition: all 1s ease-in-out 0s;
+    -o-transition: all 1s ease-in-out 0s;
+    margin-top:-100px;
+    /* margin-left: 8pc; */
+    display: relative;
+
+    
+   
+     /* margin-top: -50px;
+    margin-left: center;
+    margin-right: center; 
+    max-width: 250px; */
+
+    /* visibility: visible; */
+    /* top: 50%;
+    margin-top:-25%;
+    left: 230px;  */
+    /* z-index: 50; */
+
+
 }
+
+.column>img:hover{ 
+    visibility: visible;
+    top: 50%;
+    right: 50%;
+    left: 50%;
+    margin-top:-25%;
+    left: 230px; 
+    z-index: 50;
+    }
+
 
 
 /* footer */
@@ -159,3 +224,14 @@ i {
     padding: 10px 15px;
 }
 
+/* product page */
+
+.colprod { flex: 20%;
+    padding: 0;
+position:center;}
+
+.container-prod {max-width: 95%;
+padding: 0px 0px 30px 20px;}
+
+.columntext {padding: 180px 0px 30px 120px;
+}
