--- a/stylesheet.css
+++ b/stylesheet.css
@@ -343,15 +343,21 @@ i.fas span {
                          
 ************************************************************   - */
 
+.cart-h1 {
+    font-family: 'Playfair Display', serif;
+    font-size: 45px;
+    text-align: center;
+    padding: 20px;
+}
 
-/* .container-products {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin-top: 50px;
-    padding-bottom: 100px;
-    ;
-} */
+.container-table {
+    border: 3px solid rgb(76, 76, 76);
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+}
 
 .container-products {
     display: flex;
@@ -469,16 +475,27 @@ div.total {
     justify-content: flex-end;
     font-size: 25px;
     width: 100%;
-    padding: 10px 0;
+    padding: 30px 0;
 }
 
 .basketTotalTitle {
-    width: 72%;
+    width: 60%;
     margin-left: 450px;
+    text-align: end;
 }
 
 .basketTotal {
-    width: 28%;
+    width: 40%;
+    text-align: center;
+}
+
+.payment {
+    border: 3px solid rgb(76, 76, 76);
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
 }
 
 @media(max-width: 500px) {
