--- a/stylesheet.css
+++ b/stylesheet.css
@@ -453,7 +453,7 @@ span.sm-hide {
 }
 
 .products {
-    width: 100%;
+    /* width: 100%; */
     display: flex;
     flex-wrap: wrap;
     font-size: 15px;
