--- a/stylesheet.css
+++ b/stylesheet.css
@@ -453,14 +453,14 @@ span.sm-hide {
 }
 
 .products {
-    /* width: 100%; */
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     font-size: 15px;
     max-width: 800px;
 }
 
-.products .cart-img {
+.product .cart-img {
     width: 75px;
     margin-right: 10px;
 }
