--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -187,10 +187,61 @@ a:hover {
 ************************************************************   - */
 
 
+/* -------------------- Parallax --------------------*/
+
+.parallax {
+    /* The image used */
+    background-image: url("/assets/images/wedding_main.jpg");
+    /* Set a specific height */
+    height: 800px;
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-top: 35px;
+}
+
+.parallax-text {
+    text-align: left;
+    padding: 200px 0px 50px 100px;
+    font-family: 'Playfair Display', serif;
+    font-size: 40px;
+    color: rgb(255, 255, 255, 0.8);
+}
+
+.text-box {
+    font-family: 'Playfair Display', serif;
+    font-size: 25px;
+    text-indent: 80px;
+    color: rgb(41, 41, 41);
+    background-color: rgb(255, 255, 255);
+    height: 100%;
+    padding: 30px 10px 10px 10px;
+    text-align: justify;
+    line-height: 45px;
+}
+
+.parallax2 {
+    /* The image used */
+    background-image: url("/assets/images/cityscapes.jpg");
+    /* Set a specific height */
+    height: 800px;
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-top: 35px;
+}
+
+
 /* -------------------- CAROUSEL --------------------*/
 
 .container.carousel {
-    padding-top: 30px;
+    padding-top: 15px;
+    padding-bottom: 0;
+    margin: 0;
 }
 
 .container.row {
@@ -225,7 +276,8 @@ a:hover {
 
 .row.gallery {
     display: flex;
-    padding: 30px 0px;
+    padding: 30px 0px 30px 0px;
+    ;
     background-color: white;
 }
 
@@ -325,7 +377,7 @@ i:hover {
 }
 
 h2 {
-    font-family: 'Noto Serif SC', serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 18px;
     text-align: center;
 }
@@ -354,12 +406,13 @@ h2 {
 }
 
 .about {
-    font-size: 40px;
+    font-family: 'Playfair Display', serif;
+    font-size: 4px;
     padding: 40px 0;
 }
 
 .about-text {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 25px;
     line-height: 55px;
     padding-top: 35px;
@@ -367,30 +420,43 @@ h2 {
 }
 
 .about-text2 {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 25px;
     line-height: 55px;
     padding-bottom: 35px;
     text-indent: 80px;
 }
 
-
-/* .flex-container.about {
+.flex-container.about {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    position: relative;
     padding: 0px 20px;
-} */
+}
 
 .card-about {
-    /* width: 500px; */
+    width: 450px;
+}
+
+.team.card-img-top {
+    width: 380px;
+    height: 420px;
+    padding: 15px;
 }
 
 .about.card-title {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 40px;
+    font-family: 'Playfair Display', serif;
+    font-size: 35px;
     text-align: center;
+    padding: 20px 0;
+}
+
+.card-text.about {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 25px;
+    padding: 10px;
 }
 
 
@@ -462,7 +528,7 @@ h1 {
     font-family: 'Playfair Display', serif;
     font-size: 30px;
     width: 500px;
-    padding: 30px 0;
+    padding: 30px 20px;
     color: rgb(37, 37, 37);
 }
 
@@ -470,14 +536,14 @@ h1 {
     font-family: 'Montserrat', sans-serif;
     font-size: 20px;
     width: 500px;
-    padding: 30px 0 60px 0;
+    padding: 10px 10px 20px 10px;
 }
 
 .service.price {
     font-family: 'Montserrat', sans-serif;
-    font-size: 25px;
+    font-size: 28px;
     width: 500px;
-    padding: 30px 0 60px 0;
+    padding: 25px 20px;
 }
 
 .add-cart {
@@ -1187,7 +1253,7 @@ div.total {
     .company-logo {
         width: 110%;
     }
-    ul.navbar-nav a {
+    .nav-item>a {
         font-size: 20px;
     }
     .navbar-toggler-icon {
