--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -397,26 +397,32 @@ h2 {
     padding-top: 50px;
 }
 
-.camera {
-    width: 400px;
-    height: auto;
-    object-fit: cover;
-    padding-top: 50px;
-    margin-left: 50px;
+.parallax3 {
+    /* The image used */
+    background-image: url("/assets/images/esplanade.jpg");
+    /* Set a specific height */
+    height: 800px;
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-top: 35px;
 }
 
 .about {
     font-family: 'Playfair Display', serif;
-    font-size: 4px;
+    font-size: 40px;
     padding: 40px 0;
 }
 
 .about-text {
     font-family: 'Montserrat', sans-serif;
     font-size: 25px;
-    line-height: 55px;
-    padding-top: 35px;
+    line-height: 40px;
+    padding-top: 20px;
     text-indent: 80px;
+    text-align: justify;
 }
 
 .about-text2 {
@@ -424,6 +430,7 @@ h2 {
     font-size: 25px;
     line-height: 55px;
     padding-bottom: 35px;
+    padding-top: 10px;
     text-indent: 80px;
 }
 
