--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -340,6 +340,11 @@ hr:not([size]) {
     margin: auto;
 }
 
+.contact-us {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 20px;
+}
+
 .address {
     font-family: 'Montserrat', sans-serif;
     font-size: 20px;
@@ -1274,18 +1279,17 @@ div.total {
         width: 100%;
         font-size: 10px;
     }
-    .address {
-        font-size: 10px;
+    .address,
+    h3.follow-us {
+        font-size: 15px;
         text-align: center;
         padding: 0;
     }
-    .col-md-6.right,
-    h3.follow-us,
-    #text {
-        text-align: center;
+    .col-md-6.right {
+        padding: 0px 110px;
+        margin: 0px;
         align-items: center;
         justify-content: center;
-        padding: 0;
         font-size: 15px;
     }
     i.fab {
@@ -1296,5 +1300,15 @@ div.total {
     }
     h2 {
         font-size: 10px;
+    }
+    .parallax,
+    .parallax2 {
+        height: 500px;
+    }
+    .parallax-text {
+        font-size: 20px;
+    }
+    .text-box {
+        font-size: 15px;
     }
 }
